vs2003_cd02/Program Files/Microsoft Visual Studio .NET 2003/SDK/v1.1/QuickStart/aspplus/samples/apps/errors/custom1/js/web.config

<configuration>
  <system.web>
    <customErrors defaultRedirect="genericerror.htm" mode="On"/>
  </system.web>
</configuration>
